fix return button spacing for devices without notch

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -512,8 +512,11 @@ html .ui-btn.ui-icon-radio-off:after {
   display: block;
   width: 26px;
   height: 26px;
-  margin-top: 6.5px;
+  top:  0;
+  margin-top: constant(safe-area-inset-top);
+  margin-top: env(safe-area-inset-top);
 }
+
 .ui-btn-icon-left:focus:after, .ui-btn-icon-left:active:after {
   background-color:           rgba(53,61,44,.5) /*{global-icon-disc}*/;  
 }
